--- a/ai-proxy/Cargo.toml
+++ b/ai-proxy/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "openai-proxy"
-authors = ["Peter Salomonsen <pjsalomonsen@gmail.com>"]
+name = "ai-proxy"
+authors = ["Multi DAO <multidaomensional@gmail.com>"]
 description = ""
 version = "0.1.0"
 edition = "2021"
